--- a/structure/menu.html
+++ b/structure/menu.html
@@ -11,10 +11,10 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">Home<span class="sr-only">(current)</span></a></li>
-                    <li><a href="#/login">Login</a></li>
-                    <li><a href="#">Sign Up</a></li>
-                    <li class="dropdown">
+                <li ui-sref-active="active"><a href="#/">Home<span class="sr-only">(current)</span></a></li>
+                <li ui-sref-active="active"><a href="#/login">Login</a></li>
+                <li ui-sref-active="active"><a href="#/signup">Sign Up</a></li>
+                <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blogs<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Write a Blog</a></li>
