--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <script type="text/javascript" src="bower_components/stamplay-js-sdk/dist/stamplay.min.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-        <script type="text/javascript" src="app.js"></script> 
+        <script type="text/javascript" src="app.js"></script>
+        <link rel="stylesheet" href="styles.css" type="text/css" />
     </head> 
     <body ng-controller="myCtrl"> 
         <div class="container-fluid">
