--- a/structure/menu.html
+++ b/structure/menu.html
@@ -18,7 +18,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blogs<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Write a Blog</a></li>
-                        <li><a href="#/viewBlogs">View My Blogs</a></li>
+                        <li><a href="#/myBlogs">View My Blogs</a></li>
                         <li><a href="#">Something else here</a></li>
                     </ul>
                 </li>
