--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="bower_components/stamplay-js-sdk/dist/stamplay.min.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-        <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
         <link rel="stylesheet" href="styles.css" type="text/css" />
     </head> 
     <body ng-controller="myCtrl"> 
         <div class="container-fluid">
             <div ng-include="'structure/menu.html'"></div>
-            
         </div>
-        <div ng-view></div>
+        <div ui-view></div>
     </body> 
 </html>
