--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html ng-app="myApp"> 
     <head>  
         <title>BlogIt!</title>
-        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.min.css" type="text/css" />
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="bower_components/stamplay-js-sdk/dist/stamplay.min.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+        <script type="text/javascript" src="bower_components/ngToast/dist/ngToast.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
         <link rel="stylesheet" href="styles.css" type="text/css" />
     </head> 
-    <body ng-controller="myCtrl"> 
+    <body ng-controller="MainCtrl">
+        <toast></toast> 
         <div class="container-fluid">
             <div ng-include="'structure/menu.html'"></div>
         </div>
