--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>BlogIt!</title>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
         <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.min.css" type="text/css" />
+        <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css" type="text/css" />
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" type="text/css" />
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="bower_components/stamplay-js-sdk/dist/stamplay.min.js"></script>
@@ -11,9 +13,14 @@
         <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
         <script type="text/javascript" src="bower_components/ngToast/dist/ngToast.min.js"></script>
+        <script type="text/javascript" src='bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
+        <script type="text/javascript" src='bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
+        <script type="text/javascript" src='bower_components/textAngular/dist/textAngular.min.js'></script>
+        
         <script type="text/javascript" src="app.js"></script>
         <link rel="stylesheet" href="styles.css" type="text/css" />
     </head> 
+    
     <body ng-controller="MainCtrl">
         <toast></toast> 
         <div class="container-fluid">
