--- a/structure/menu.html
+++ b/structure/menu.html
@@ -17,7 +17,7 @@
                 <li class="dropdown" ng-if="loggedIn">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blogs<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Write a Blog</a></li>
+                        <li><a ui-sref="Create">Write a Blog</a></li>
                         <li><a ui-sref="MyBlogs">View My Blogs</a></li>
                         <li><a href="#">Something else here</a></li>
                     </ul>
